--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtqSRxju3ZILRFwyGbzG5e",
+      "authorship_tag": "ABX9TyO3k0d/sk4tIDP1wvH6Xkqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,34 @@
           "name": "stdout",
           "text": [
             "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=10\n",
+        "b=20\n",
+        "if a>b:\n",
+        "  print(\"a is largest element\")\n",
+        "else:\n",
+        "  print(\"b is largest element\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ye5x4ItmTLWA",
+        "outputId": "c5b53fd7-b745-42d7-905c-bd65524098c5"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b is largest element\n"
           ]
         }
       ]
