--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3k0d/sk4tIDP1wvH6Xkqp",
+      "authorship_tag": "ABX9TyNQh7tQ08xE3BFuYcnRYEaB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xYiXUTLAQRRR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "a=10\n",
         "b=20\n",
@@ -64,7 +73,7 @@
         "id": "3TIWABYxSjw4",
         "outputId": "7b5ce3a7-ebf6-4d32-96fa-d098e8310812"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,13 +101,43 @@
         "id": "ye5x4ItmTLWA",
         "outputId": "c5b53fd7-b745-42d7-905c-bd65524098c5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "b is largest element\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(a,b):\n",
+        "  return a+b\n",
+        "num_1=int(input(\"enter a:\"))\n",
+        "num_2=int(input(\"enter b:\"))\n",
+        "result=add(num_1,num_2)\n",
+        "print(f\"the sum:{result}\")\n"
+      ],
+      "metadata": {
+        "id": "jTHusLJNT1VB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f6b7a5a-0ff4-4d91-ba6f-bf5aaafe0609"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a:13\n",
+            "enter b:23\n",
+            "the sum:36\n"
           ]
         }
       ]
