--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQh7tQ08xE3BFuYcnRYEaB",
+      "authorship_tag": "ABX9TyPAk0CAKhrli4LOazcZHyGi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,6 +138,45 @@
             "enter a:13\n",
             "enter b:23\n",
             "the sum:36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Tvb9_hKtVICe"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def palindrome(s):\n",
+        "    return s == s[::-1]  # Check if the string is equal to its reverse\n",
+        "string = input(\"Enter a string: \")\n",
+        "if palindrome(string):\n",
+        "    print(f'\"{string}\" is a palindrome')\n",
+        "else:\n",
+        "    print(f'\"{string}\" is not a palindrome')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d-S1MgY4TZeI",
+        "outputId": "cbf73168-5b4b-4550-d1f1-23b60b542325"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: madam\n",
+            "\"madam\" is a palindrome\n"
           ]
         }
       ]
