--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAk0CAKhrli4LOazcZHyGi",
+      "authorship_tag": "ABX9TyM29qqbNTxXK5qD5IL1xkOB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +180,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# to get average of lsit\n",
+        "def average(lst):\n",
+        "  sum_of_list=0\n",
+        "  for i in range(len(lst)):\n",
+        "    sum_of_list += lst[i]\n",
+        "  average=sum_of_list/len(lst)\n",
+        "  return average"
+      ],
+      "metadata": {
+        "id": "TpcHYeulV6r2"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
