--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM29qqbNTxXK5qD5IL1xkOB",
+      "authorship_tag": "ABX9TyN9M0o5kFkUXlIoDUh6VEeM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,37 @@
       ],
       "source": [
         "print(\"Hello world\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input())\n",
+        "d=int(input())\n",
+        "n=int(input())\n",
+        "# Compute the AP Term\n",
+        "ans = a+(n-1)*d\n",
+        "print(ans)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Cx5EXhscw49",
+        "outputId": "b1948bfc-9345-463c-9d49-b781c9d8a931"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "4\n",
+            "11\n"
+          ]
+        }
       ]
     },
     {
@@ -129,7 +160,7 @@
         },
         "outputId": "2f6b7a5a-0ff4-4d91-ba6f-bf5aaafe0609"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +179,7 @@
       "metadata": {
         "id": "Tvb9_hKtVICe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +200,7 @@
         "id": "d-S1MgY4TZeI",
         "outputId": "cbf73168-5b4b-4550-d1f1-23b60b542325"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +226,7 @@
       "metadata": {
         "id": "TpcHYeulV6r2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
