--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9M0o5kFkUXlIoDUh6VEeM",
+      "authorship_tag": "ABX9TyPct3w+BVBG14QJXSOV1b2j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kudupudimeghana/Python_Programmes/blob/main/Python_programs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ra91cLQ7DvCJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -52,6 +61,35 @@
     {
       "cell_type": "code",
       "source": [
+        "import math\n",
+        "\n",
+        "a = 6\n",
+        "b = 9\n",
+        "gcd = math.gcd(a, b)\n",
+        "lcm = (a * b) // gcd\n",
+        "print(lcm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MEz153jjDm4V",
+        "outputId": "1f635256-0e1b-4020-ab1f-98e50406accb"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "a=int(input())\n",
         "d=int(input())\n",
         "n=int(input())\n",
@@ -66,7 +104,7 @@
         "id": "2Cx5EXhscw49",
         "outputId": "b1948bfc-9345-463c-9d49-b781c9d8a931"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
