--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPct3w+BVBG14QJXSOV1b2j",
+      "authorship_tag": "ABX9TyOOrBKKEuL47x5CQBvLsQYc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,61 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "number = random.randint(1, 100)\n",
+        "guess = None\n",
+        "\n",
+        "print(\"Guess the number between 1 and 100!\")\n",
+        "\n",
+        "while guess != number:\n",
+        "    guess = int(input(\"Your guess: \"))\n",
+        "    if guess < number:\n",
+        "        print(\"Too low!\")\n",
+        "    elif guess > number:\n",
+        "        print(\"Too high!\")\n",
+        "    else:\n",
+        "        print(\"Correct! You guessed the number.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cLJppsHGHgCw",
+        "outputId": "841db70c-473f-4ab7-977b-1645dd97fd2c"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guess the number between 1 and 100!\n",
+            "Your guess: 3\n",
+            "Too low!\n",
+            "Your guess: 67\n",
+            "Too low!\n",
+            "Your guess: 34\n",
+            "Too low!\n",
+            "Your guess: 99\n",
+            "Too high!\n",
+            "Your guess: 85\n",
+            "Too low!\n",
+            "Your guess: 89\n",
+            "Too low!\n",
+            "Your guess: 95\n",
+            "Too low!\n",
+            "Your guess: 97\n",
+            "Too high!\n",
+            "Your guess: 96\n",
+            "Correct! You guessed the number.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -76,7 +131,7 @@
         "id": "MEz153jjDm4V",
         "outputId": "1f635256-0e1b-4020-ab1f-98e50406accb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
