--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOrBKKEuL47x5CQBvLsQYc",
+      "authorship_tag": "ABX9TyOTuZ2cvqnHf41H6goQk71t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kudupudimeghana/Python_Programmes/blob/main/Python_programs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ra91cLQ7DvCJ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -61,7 +52,7 @@
         "id": "cLJppsHGHgCw",
         "outputId": "841db70c-473f-4ab7-977b-1645dd97fd2c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,6 +77,48 @@
             "Too high!\n",
             "Your guess: 96\n",
             "Correct! You guessed the number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = float(input(\"Enter first number: \"))\n",
+        "b = float(input(\"Enter second number: \"))\n",
+        "op = input(\"Choose operation (+, -, *, /): \")\n",
+        "\n",
+        "if op == '+':\n",
+        "    print(\"Result:\", a + b)\n",
+        "elif op == '-':\n",
+        "    print(\"Result:\", a - b)\n",
+        "elif op == '*':\n",
+        "    print(\"Result:\", a * b)\n",
+        "elif op == '/':\n",
+        "    if b != 0:\n",
+        "        print(\"Result:\", a / b)\n",
+        "    else:\n",
+        "        print(\"Cannot divide by zero.\")\n",
+        "else:\n",
+        "    print(\"Invalid operation.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G15QEuX-nKjt",
+        "outputId": "3c390bd3-e398-4dfc-d506-cb9802be2de3"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 34\n",
+            "Enter second number: 34\n",
+            "Choose operation (+, -, *, /): +\n",
+            "Result: 68.0\n"
           ]
         }
       ]
