--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTuZ2cvqnHf41H6goQk71t",
+      "authorship_tag": "ABX9TyMrD/kue3p2+nLPVKBhmDZK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,6 +84,33 @@
     {
       "cell_type": "code",
       "source": [
+        "# Fibonacci sequence\n",
+        "def fibonacci(n):\n",
+        "    \"\"\"\n",
+        "    This function generates the Fibonacci sequence up to the nth term.\n",
+        "    The Fibonacci sequence is a series of numbers in which each number is the sum of the two preceding ones, usually starting with 0 and 1.\n",
+        "    \"\"\"\n",
+        "    fib_list = [0, 1]\n",
+        "    if n <= 0:\n",
+        "        return []\n",
+        "    elif n == 1:\n",
+        "        return [0]\n",
+        "    else:\n",
+        "        for i in range(2, n):\n",
+        "            next_fib = fib_list[i-1] + fib_list[i-2]\n",
+        "            fib_list.append(next_fib)\n",
+        "        return fib_list\n"
+      ],
+      "metadata": {
+        "id": "rTstaVbHqTgq"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# calculator program\n",
         "a = float(input(\"Enter first number: \"))\n",
         "b = float(input(\"Enter second number: \"))\n",
         "op = input(\"Choose operation (+, -, *, /): \")\n",
@@ -109,7 +136,7 @@
         "id": "G15QEuX-nKjt",
         "outputId": "3c390bd3-e398-4dfc-d506-cb9802be2de3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
