--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrD/kue3p2+nLPVKBhmDZK",
+      "authorship_tag": "ABX9TyMlA4a/mIwiHr69PWIwKKKW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,12 +84,51 @@
     {
       "cell_type": "code",
       "source": [
+        "# Function to check Armstrong number\n",
+        "def is_armstrong(number):\n",
+        "    # Convert number to string to count digits\n",
+        "    num_str = str(number)\n",
+        "    num_digits = len(num_str)\n",
+        "\n",
+        "    # Calculate the sum of powers of its digits\n",
+        "    total = sum(int(digit) ** num_digits for digit in num_str)\n",
+        "\n",
+        "    # Check if it is equal to the original number\n",
+        "    return total == number\n",
+        "\n",
+        "# Input from user\n",
+        "num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "# Output\n",
+        "if is_armstrong(num):\n",
+        "    print(num, \"is an Armstrong number.\")\n",
+        "else:\n",
+        "    print(num, \"is not an Armstrong number.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3p-3BVgn8J2G",
+        "outputId": "bc36d293-dfda-4be1-83e5-35880c07edba"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 10\n",
+            "10 is not an Armstrong number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Fibonacci sequence\n",
         "def fibonacci(n):\n",
-        "    \"\"\"\n",
-        "    This function generates the Fibonacci sequence up to the nth term.\n",
-        "    The Fibonacci sequence is a series of numbers in which each number is the sum of the two preceding ones, usually starting with 0 and 1.\n",
-        "    \"\"\"\n",
         "    fib_list = [0, 1]\n",
         "    if n <= 0:\n",
         "        return []\n",
@@ -104,7 +143,7 @@
       "metadata": {
         "id": "rTstaVbHqTgq"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
