--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlA4a/mIwiHr69PWIwKKKW",
+      "authorship_tag": "ABX9TyPt6pKtZwvc0Sxt+BJM3Zhn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,6 +84,42 @@
     {
       "cell_type": "code",
       "source": [
+        "# Simple Python program using array (list)\n",
+        "\n",
+        "# Create an array of integers\n",
+        "numbers = [5, 10, 15, 20, 25]\n",
+        "\n",
+        "# Initialize a variable to store the sum\n",
+        "total = 0\n",
+        "\n",
+        "# Iterate through the array and calculate the sum\n",
+        "for num in numbers:\n",
+        "    total += num\n",
+        "\n",
+        "# Print the result\n",
+        "print(\"The sum of the array elements is:\", total)\n"
+      ],
+      "metadata": {
+        "id": "Hc4nSvA8E1DS",
+        "outputId": "2b97da18-bc77-4429-9950-9c58c77edc08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of the array elements is: 75\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Function to check Armstrong number\n",
         "def is_armstrong(number):\n",
         "    # Convert number to string to count digits\n",
@@ -112,7 +148,7 @@
         "id": "3p-3BVgn8J2G",
         "outputId": "bc36d293-dfda-4be1-83e5-35880c07edba"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
