--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt6pKtZwvc0Sxt+BJM3Zhn",
+      "authorship_tag": "ABX9TyM8rYGxedeCZTk68ZOZX4Hv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,6 +84,111 @@
     {
       "cell_type": "code",
       "source": [
+        "import random\n",
+        "\n",
+        "print(\"🎯 Welcome to Guess the Number!\")\n",
+        "print(\"I'm thinking of a number between 1 and 100...\")\n",
+        "print(\"Can you guess it? 😏\")\n",
+        "\n",
+        "# Generate random number\n",
+        "secret_number = random.randint(1, 100)\n",
+        "attempts = 0\n",
+        "\n",
+        "while True:\n",
+        "    try:\n",
+        "        guess = int(input(\"Your guess: \"))\n",
+        "        attempts += 1\n",
+        "\n",
+        "        if guess < 1 or guess > 100:\n",
+        "            print(\"🚫 That’s not between 1 and 100! Try again.\")\n",
+        "        elif guess < secret_number:\n",
+        "            print(\"📈 Too low! Aim higher...\")\n",
+        "        elif guess > secret_number:\n",
+        "            print(\"📉 Too high! Bring it down...\")\n",
+        "        else:\n",
+        "            print(f\"🎉 Nailed it! The number was {secret_number}.\")\n",
+        "            print(f\"🏆 You got it in {attempts} attempts!\")\n",
+        "            break\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"❌ That's not a valid number. Try again!\")\n",
+        "\n",
+        "print(\"Thanks for playing! 🎮\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f2wpDvFd2Ppl",
+        "outputId": "f7c4384b-2c7f-4a2d-cb70-dce091d42216"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🎯 Welcome to Guess the Number!\n",
+            "I'm thinking of a number between 1 and 100...\n",
+            "Can you guess it? 😏\n",
+            "Your guess: 13\n",
+            "📈 Too low! Aim higher...\n",
+            "Your guess: 52\n",
+            "📉 Too high! Bring it down...\n",
+            "Your guess: 25\n",
+            "📈 Too low! Aim higher...\n",
+            "Your guess: 50\n",
+            "🎉 Nailed it! The number was 50.\n",
+            "🏆 You got it in 4 attempts!\n",
+            "Thanks for playing! 🎮\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "a = int(input())\n",
+        "b = int(input())\n",
+        "\n",
+        "words = [\n",
+        "    \"one\", \"two\", \"three\", \"four\", \"five\",\n",
+        "    \"six\", \"seven\", \"eight\", \"nine\"\n",
+        "]\n",
+        "\n",
+        "for i in range(a, b + 1):\n",
+        "    if 1 <= i <= 9:\n",
+        "        print(words[i - 1])\n",
+        "    else:\n",
+        "        if i % 2 == 0:\n",
+        "            print(\"even\")\n",
+        "        else:\n",
+        "            print(\"odd\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sH3lBxXNfjUG",
+        "outputId": "f51b6ee3-027d-4753-c816-4a4e78775f76"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "6\n",
+            "six\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Simple Python program using array (list)\n",
         "\n",
         "# Create an array of integers\n",
@@ -100,13 +205,13 @@
         "print(\"The sum of the array elements is:\", total)\n"
       ],
       "metadata": {
-        "id": "Hc4nSvA8E1DS",
-        "outputId": "2b97da18-bc77-4429-9950-9c58c77edc08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Hc4nSvA8E1DS",
+        "outputId": "2b97da18-bc77-4429-9950-9c58c77edc08"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
