--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8rYGxedeCZTk68ZOZX4Hv",
+      "authorship_tag": "ABX9TyNuuiPcIbVzZPDYXEHRgj25",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,7 +122,7 @@
         "id": "f2wpDvFd2Ppl",
         "outputId": "f7c4384b-2c7f-4a2d-cb70-dce091d42216"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,6 +141,42 @@
             "🎉 Nailed it! The number was 50.\n",
             "🏆 You got it in 4 attempts!\n",
             "Thanks for playing! 🎮\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "fact = 1\n",
+        "\n",
+        "if num < 0:\n",
+        "    print(\"Factorial does not exist for negative numbers\")\n",
+        "elif num == 0:\n",
+        "    print(\"Factorial is 1\")\n",
+        "else:\n",
+        "    for i in range(1, num + 1):\n",
+        "        fact = fact * i\n",
+        "\n",
+        "    print(\"Factorial of\", num, \"is\", fact)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rMg6pS_xpYIf",
+        "outputId": "5410cc50-6cd9-4369-e50b-a05bd779c464"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 4\n",
+            "Factorial of 4 is 24\n"
           ]
         }
       ]
@@ -508,7 +544,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "password = input(\"Enter a password: \")\n",
+        "\n",
+        "if len(password) < 4:\n",
+        "    print(\"That's adorable. Try again.\")\n",
+        "elif password.isalpha():\n",
+        "    print(\"Only letters? Are we in kindergarten?\")\n",
+        "elif password.isdigit():\n",
+        "    print(\"Just numbers? How original.\")\n",
+        "else:\n",
+        "    print(\"Not bad… still hackable, but not bad.\")\n"
+      ],
       "metadata": {
         "id": "Tvb9_hKtVICe"
       },
