--- a/Python_programs.ipynb
+++ b/Python_programs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuuiPcIbVzZPDYXEHRgj25",
+      "authorship_tag": "ABX9TyN0nHLLT+/cJJjyttKmfPkH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,6 +218,43 @@
             "6\n",
             "6\n",
             "six\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#table printing\n",
+        "num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "for i in range(1, 11):\n",
+        "    print(num, \"x\", i, \"=\", num * i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IJwC_ZvWq_SL",
+        "outputId": "09cbfb73-449c-4c60-b937-b83c9c87fadc"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 4\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n"
           ]
         }
       ]
